@@ -17,7 +17,6 @@
 package org.springframework.cloud.kubernetes.fabric8.config;
 
 import java.util.Base64;
-import java.util.Collections;
 import java.util.Map;
 
 import io.fabric8.kubernetes.api.model.Secret;
@@ -25,8 +24,8 @@ import io.fabric8.kubernetes.api.model.SecretBuilder;
 import io.fabric8.kubernetes.client.Config;
 import io.fabric8.kubernetes.client.KubernetesClient;
 import io.fabric8.kubernetes.client.server.mock.EnableKubernetesMockClient;
+import org.assertj.core.api.Assertions;
 import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.BeforeAll;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -94,8 +93,9 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.default");
-		Assertions.assertEquals(sourceData.sourceData(), Map.of("color", "really-red"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.default");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(Map.of("color", "really-red"));
 
 	}
 
@@ -135,9 +135,9 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.default");
-		Assertions.assertEquals(sourceData.sourceData().size(), 1);
-		Assertions.assertEquals(sourceData.sourceData().get("color"), "really-red");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.default");
+		Assertions.assertThat(sourceData.sourceData().size()).isEqualTo(1);
+		Assertions.assertThat(sourceData.sourceData().get("color")).isEqualTo("really-red");
 
 	}
 
@@ -162,8 +162,8 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.blue.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.emptyMap());
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.blue.default");
+		Assertions.assertThat(sourceData.sourceData()).isEmpty();
 	}
 
 	/**
@@ -191,8 +191,9 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.default");
-		Assertions.assertEquals(sourceData.sourceData(), Map.of("color", "really-red"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.default");
+		Assertions.assertThat(sourceData.sourceData())
+			.containsExactlyInAnyOrderEntriesOf(Map.of("color", "really-red"));
 	}
 
 	/**
@@ -227,10 +228,10 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.red-with-profile.default.with-profile");
-		Assertions.assertEquals(sourceData.sourceData().size(), 2);
-		Assertions.assertEquals(sourceData.sourceData().get("color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("taste"), "mango");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.red-with-profile.default.with-profile");
+		Assertions.assertThat(sourceData.sourceData().size()).isEqualTo(2);
+		Assertions.assertThat(sourceData.sourceData().get("color")).isEqualTo("really-red");
+		Assertions.assertThat(sourceData.sourceData().get("taste")).isEqualTo("mango");
 
 	}
 
@@ -269,10 +270,10 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.red-with-profile.default");
-		Assertions.assertEquals(sourceData.sourceData().size(), 2);
-		Assertions.assertEquals(sourceData.sourceData().get("some.color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("some.taste"), "mango");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.red-with-profile.default");
+		Assertions.assertThat(sourceData.sourceData().size()).isEqualTo(2);
+		Assertions.assertThat(sourceData.sourceData().get("some.color")).isEqualTo("really-red");
+		Assertions.assertThat(sourceData.sourceData().get("some.taste")).isEqualTo("mango");
 
 	}
 
@@ -318,12 +319,12 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.red.red-with-shape.red-with-taste.default");
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.red.red-with-shape.red-with-taste.default");
 
-		Assertions.assertEquals(sourceData.sourceData().size(), 3);
-		Assertions.assertEquals(sourceData.sourceData().get("some.color"), "really-red");
-		Assertions.assertEquals(sourceData.sourceData().get("some.taste"), "mango");
-		Assertions.assertEquals(sourceData.sourceData().get("some.shape"), "round");
+		Assertions.assertThat(sourceData.sourceData().size()).isEqualTo(3);
+		Assertions.assertThat(sourceData.sourceData().get("some.color")).isEqualTo("really-red");
+		Assertions.assertThat(sourceData.sourceData().get("some.taste")).isEqualTo("mango");
+		Assertions.assertThat(sourceData.sourceData().get("some.shape")).isEqualTo("round");
 
 	}
 
@@ -350,8 +351,8 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData data = new NamedSecretContextToSourceDataProvider().get();
 		SourceData sourceData = data.apply(context);
 
-		Assertions.assertEquals(sourceData.sourceName(), "secret.single-yaml.default");
-		Assertions.assertEquals(sourceData.sourceData(), Collections.singletonMap("key", "value"));
+		Assertions.assertThat(sourceData.sourceName()).isEqualTo("secret.single-yaml.default");
+		Assertions.assertThat(sourceData.sourceData()).containsExactlyInAnyOrderEntriesOf(Map.of("key", "value"));
 	}
 
 	/**
@@ -385,10 +386,10 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData redData = new NamedSecretContextToSourceDataProvider().get();
 		SourceData redSourceData = redData.apply(redContext);
 
-		Assertions.assertEquals(redSourceData.sourceName(), "secret.red.default");
-		Assertions.assertEquals(redSourceData.sourceData().size(), 1);
-		Assertions.assertEquals(redSourceData.sourceData().get("some.color"), "red");
-		Assertions.assertTrue(output.getAll().contains("Loaded all secrets in namespace '" + NAMESPACE + "'"));
+		Assertions.assertThat(redSourceData.sourceName()).isEqualTo("secret.red.default");
+		Assertions.assertThat(redSourceData.sourceData().size()).isEqualTo(1);
+		Assertions.assertThat(redSourceData.sourceData().get("some.color")).isEqualTo("red");
+		Assertions.assertThat(output.getAll()).contains("Loaded all secrets in namespace '" + NAMESPACE + "'");
 
 		NormalizedSource greenNormalizedSource = new NamedSecretNormalizedSource("green", NAMESPACE, true, PREFIX,
 				false);
@@ -396,17 +397,17 @@ class NamedSecretContextToSourceDataProviderTests {
 		Fabric8ContextToSourceData greenData = new NamedSecretContextToSourceDataProvider().get();
 		SourceData greenSourceData = greenData.apply(greenContext);
 
-		Assertions.assertEquals(greenSourceData.sourceName(), "secret.green.default");
-		Assertions.assertEquals(greenSourceData.sourceData().size(), 1);
-		Assertions.assertEquals(greenSourceData.sourceData().get("some.taste"), "mango");
+		Assertions.assertThat(greenSourceData.sourceName()).isEqualTo("secret.green.default");
+		Assertions.assertThat(greenSourceData.sourceData().size()).isEqualTo(1);
+		Assertions.assertThat(greenSourceData.sourceData().get("some.taste")).isEqualTo("mango");
 
 		// meaning there is a single entry with such a log statement
 		String[] out = output.getAll().split("Loaded all secrets in namespace");
-		Assertions.assertEquals(out.length, 2);
+		Assertions.assertThat(out.length).isEqualTo(2);
 
 		// meaning that the second read was done from the cache
 		out = output.getAll().split("Loaded \\(from cache\\) all secrets in namespace");
-		Assertions.assertEquals(out.length, 2);
+		Assertions.assertThat(out.length).isEqualTo(2);
 
 	}
 
